src/objects/Deskcom__desk_org_oauth_token__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>An OAuth token that is available for users org-wide, as long as they have the required privileges.</description>
    <fields>
        <fullName>Deskcom__is_access__c</fullName>
        <inlineHelpText>&apos;1&apos; is this is an access token; &apos;0&apos; if it&apos;s a request token.</inlineHelpText>
        <label>Is Access</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deskcom__secret__c</fullName>
        <inlineHelpText>Token secret for step 2.</inlineHelpText>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__token__c</fullName>
        <label>Token</label>
        <type>TextArea</type>
    </fields>
    <label>Desk.com Org-Wide OAuth Token</label>
</CustomObject>